--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,3 +31,59 @@ header a {
   padding: 20px;
   margin: 0 auto;
 }
+
+/* navbar */
+.nav-items {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-items li {
+  list-style-type: none;
+  padding: 10px 20px;
+}
+
+/* homepage */
+.home {
+  display: grid;
+  grid-template-columns: 3fr 1fr; /*should change for form layout*/
+  gap: 100px;
+}
+.case-details {
+  background: #fff;
+  border-radius: 4px;
+  margin: 20px auto;
+  padding: 20px;
+  position: relative;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
+  /* width: max-content; */
+}
+.case-details h2 {
+  margin: 0 0 10px 0;
+  font-size: 1.5em;
+  color: var(--primary);
+}
+.case-details h4 {
+  font-size: 1em;
+}
+.case-details p {
+  margin: 0;
+  font-size: 0.9em;
+  color: #555;
+}
+.case-details span {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  background: #f1f1f1;
+  padding: 6px;
+  border-radius: 50%;
+  color: #333;
+}
+
+/* .flex {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+} */
